--- a/Client/FaceDetection.ui
+++ b/Client/FaceDetection.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1453</width>
+    <width>3103</width>
     <height>700</height>
    </rect>
   </property>
@@ -21,8 +21,8 @@
     <rect>
      <x>-90</x>
      <y>-20</y>
-     <width>2000</width>
-     <height>800</height>
+     <width>3500</width>
+     <height>3500</height>
     </rect>
    </property>
    <property name="font">
@@ -33,7 +33,7 @@
    </property>
    <property name="styleSheet">
     <string notr="true">QWidget#mainWidget{
-background-color: qlineargradient(spread:pad, x1:0.026, y1:0.0225, x2:0.823, y2:0.671, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(52, 101, 164, 255));}</string>
+	background-color: rgb(60, 71, 70);}</string>
    </property>
    <widget class="QLabel" name="pathLabel">
     <property name="geometry">
@@ -66,18 +66,51 @@ color: rgb(238, 238, 236);</string>
      <rect>
       <x>100</x>
       <y>220</y>
-      <width>900</width>
+      <width>1250</width>
       <height>300</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">font: 75 15pt &quot;Meera&quot;;
-color: rgb(255,255,255);
-background-color: rgb(85, 87, 83);</string>
+    <property name="font">
+     <font>
+      <family>Lucida Calligraphy</family>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+      <stylestrategy>PreferDefault</stylestrategy>
+     </font>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 12pt &quot;Lucida Calligraphy&quot;;
+color: rgb(0, 0, 0);
+background-color: rgb(200, 183, 179);</string>
+    </property>
+    <property name="sortingEnabled">
+     <bool>false</bool>
+    </property>
+    <attribute name="verticalHeaderHighlightSections">
+     <bool>false</bool>
+    </attribute>
     <column>
      <property name="text">
       <string>File Name</string>
+     </property>
+     <property name="foreground">
+      <brush brushstyle="NoBrush">
+       <color alpha="255">
+        <red>85</red>
+        <green>0</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Initial Image</string>
      </property>
     </column>
     <column>
@@ -135,8 +168,8 @@ color: white;</string>
    <widget class="QLabel" name="imageLabel">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>220</y>
+      <x>1420</x>
+      <y>210</y>
       <width>461</width>
       <height>321</height>
      </rect>
